# c_project

./: Makefile.am  README.md  configure.ac  func.c  header.h  main.c
